--- a/main.html
+++ b/main.html
@@ -3,20 +3,20 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>CSS Box Model</title>
+  <title>Box Model</title>
   <style>
-    .box {
+    div {
       width: 300px;
       background-color: lightblue;
-      border: 15px solid blue;  
-      padding: 50px;         
-      margin: 20px;              
+      border: 15px solid blue;
+      padding: 50px;
+      margin: 20px;
     }
   </style>
 </head>
 <body>
-  <div class="box">
-    This is a demo of box model, try to replicate this box model in Html & Css and pass all the test cases.
+  <div>
+    This is a demo of box model try to replicate this box model in Html and Css and try to pass all the test cases.
   </div>
 </body>
 </html>
